<resources>
    <string name="app_name">MyKinopoiskApp</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_movies">Фильмы</string>
    <string name="writeMovieName">Введите название фильма</string>
    <string name="movie_name">Название:</string>
    <string name="movie_genres">Жанры:</string>
    <string name="movie_year">Год выпуска:</string>
    <string name="movie_test_rating">10.0</string>
    <string name="movie_test_description">"В начале 1960-х Генри Форд II принимает решение улучшить имидж компании и сменить курс
        на производство более модных автомобилей. После неудавшейся попытки купить практически банкрота Ferrari американцы решают
        бросить вызов итальянским конкурентам на трассе и выиграть престижную гонку 24 часа Ле-Мана. Чтобы создать подходящую машину,
        компания нанимает автоконструктора Кэррола Шэлби, а тот отказывается работать без выдающегося, но, как считается, трудного в общении
        гонщика Кена Майлза. Вместе они принимаются за разработку впоследствии знаменитого спорткара Ford GT40."</string>
    <string name="movie_name_field_stub">Название фильма</string>
    <string name="movie_length_field_stub">мин.</string>
    <string name="movie_year_field_stub">Год</string>
    <string name="movie_description_tittle">Описание:</string>
    <string name="movie_field_description_sub">Текст Текст Текст Текст Текст Текст Текст Текст Текст Текст</string>
    <string name="movie_actors_tittle">Актеры:</string>
    <string name="movie_country_stub">Старана</string>
    <string name="movie_length_stub">100 мин.</string>
    <string name="movie_genres_stub">Жанры</string>
    <string name="movie_year_stub">2021</string>
    <string name="movie_rating_stub">8.0</string>
    <string name="movie_name_stub">Название фильма</string>
    <string name="add_to_favorites_tittle_stub">Добавить в избранное</string>
    <string name="remove_from_favorites_tittle_stub">Удалить из избранного</string>
    <string name="movies_tittle_stub">Фильмы</string>
    <string name="empty_recycle_movies_tittle">Вы пока что ничего не добавили в Избранное</string>
</resources>