<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/recycle_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/poster_sub"
            app:layout_constraintBottom_toTopOf="@id/movie_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/movie_name_stub"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@id/movie_rating"
            app:layout_constraintTop_toBottomOf="@id/movie_poster" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/movie_rating_stub"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/movie_genres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_name" />

        <TextView
            android:id="@+id/movie_genres"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/movie_genres_stub"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/movie_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_rating" />

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="10dp"
            android:text="@string/movie_year_stub"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/button_add_to_favorites"
            app:layout_constraintEnd_toStartOf="@id/movie_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_genres" />

        <TextView
            android:id="@+id/movie_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/movie_country_stub"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/movie_length"
            app:layout_constraintStart_toEndOf="@id/movie_year"
            app:layout_constraintTop_toTopOf="@id/movie_year" />

        <TextView
            android:id="@+id/movie_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="50dp"
            android:text="@string/movie_length_stub"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_country"
            app:layout_constraintTop_toTopOf="@id/movie_country" />

        <ImageButton
            android:id="@+id/button_add_to_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/recycle_card"
            android:padding="0dp"
            android:src="@drawable/ic_add_to_favorites_48"
            app:layout_constraintBottom_toTopOf="@id/movie_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_year" />

        <TextView
            android:id="@+id/add_to_favorites_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/recycle_card"
            android:text="@string/add_to_favorites_tittle_stub"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_add_to_favorites" />

        <ImageButton
            android:id="@+id/button_remove_from_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/recycle_card"
            android:padding="0dp"
            android:src="@drawable/ic_remove_48"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/movie_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_year" />

        <TextView
            android:id="@+id/remove_from_favorites_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/recycle_card"
            android:text="@string/remove_from_favorites_tittle_stub"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_remove_from_favorites" />

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/background_fragment"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/movie_description_tittle"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/movie_filed_description"
            app:layout_constraintTop_toBottomOf="@+id/button_add_to_favorites" />

        <TextView
            android:id="@+id/movie_filed_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/movie_field_description_sub"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/movie_actors"
            app:layout_constraintTop_toBottomOf="@+id/movie_description" />

        <TextView
            android:id="@+id/movie_actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/background_fragment"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/movie_actors_tittle"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/recycle_actors"
            app:layout_constraintTop_toBottomOf="@+id/movie_filed_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_actors" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>