<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="30dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/recycle_card">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="140dp"
            android:src="@drawable/movie_poster"
            android:layout_height="210dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_field_rating"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:text="@string/movie_test_rating"
            android:textColor="@color/white"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/movie_poster"
            app:layout_constraintEnd_toEndOf="@id/movie_poster"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/green"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/movie_field_name"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/movie_name_field_stub"
            app:layout_constraintTop_toBottomOf="@id/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/movie_field_length"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/movie_length_field_stub"
            app:layout_constraintTop_toBottomOf="@id/movie_field_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/movie_field_year"/>

        <TextView
            android:id="@+id/movie_field_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/movie_year_field_stub"
            app:layout_constraintTop_toBottomOf="@id/movie_field_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_field_length"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>